--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,20 @@
 
 services:
-  app1:
+  app:
     build:
-      context: ./app1
+      context: ./app
       dockerfile: Dockerfile
     volumes:
-      - app1-data:/app1/data  
-    ports:
-      - "8501:8501"
-    environment:
-      - DB_PATH=/app1/data
-    networks:
-      - app-network
-
-  app2:
-    build:
-      context: ./app2
-      dockerfile: Dockerfile
-    volumes:
-      - app2-data:/app2/data
+      - app-data:/app/data
     ports:
       - "8502:8501"
     environment:
-      - DB_PATH=/app2/data
+      - DB_PATH=/app/data
     networks:
       - app-network
 
 volumes:
-  app1-data:
-    driver: local
-  app2-data:
+  app-data:
     driver: local
 
 networks:
